--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="assets/images/logo.png" alt="Creative Minds Logo">
+            <img src="assets/images/cm-logo.png" alt="Creative Minds Logo">
         </div>
         <nav>
             <ul>
